--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,31 +3,22 @@
     // "editor.defaultFormatter": "csharpier.csharpier-vscode"
     "editor.defaultFormatter": "ms-dotnettools.csharp"
   },
-  "chat.promptFilesLocations": {
-    ".github/prompts": true,
-    ".vscode/prompts": true
-  },
-  "chat.instructionsFilesLocations": {
-    ".github/instructions": true,
-    ".vscode/instructions": true
-  },
+  "chat.useAgentsMdFile": true,
   "github.copilot.chat.commitMessageGeneration.instructions": [
     {
-      "file": ".vscode/git-message.instructions.md"
+      "file": ".github/instructions/git-message.instructions.md"
     }
   ],
   "github.copilot.chat.reviewSelection.enabled": true,
   "github.copilot.chat.reviewSelection.instructions": [
     {
-      "file": ".vscode/instructions/coding-guidelines.instructions.md"
+      "file": ".github/instructions/coding-guidelines.instructions.md"
     },
     {
-      "file": ".vscode/instructions/coding-style.instructions.md"
+      "file": ".github/instructions/coding-style.instructions.md"
     }
   ],
-  "github.copilot.chat.testGeneration.instructions": [
-    {
-      "file": ".vscode/instructions/testing-xunit.instructions.md"
-    }
-  ]
+  "chat.useAgentSkills": true,
+  "chat.useNestedAgentsMdFiles": true,
+  "chat.customAgentInSubagent.enabled": true
 }
